[package]
name = "tllm"
version = "0.1.0"
edition = "2021"

[dependencies]
wire = { path = "/home/joey/rust/wire" }
chamber-common = { path = "/home/joey/rust/chamber/common" }
tokio = { version = "1", features = ["full"] }
clap = { version = "4.3", features = ["derive"] }
rusqlite = { version = "0.29", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
